// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`running "projen" with no arguments will execute .projenrc.js 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes                    	linguist-generated
/.github/workflows/auto-approve.yml	linguist-generated
/.projen/                          	linguist-generated",
  ".github/workflows/auto-approve.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: auto-approve
on:
  pull_request:
    types:
      - labeled
      - opened
      - unlabeled
jobs:
  approve:
    if: contains(github.event.pull_request.labels.*.name, 'pr/auto-approve')
    runs-on: ubuntu-latest
    steps:
      - uses: hmarr/auto-approve-action@v2.0.0
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.github/workflows/auto-approve.yml
!/.projen/deps.json
!/.projen/tasks.json
",
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "clobber": Object {
        "category": "30.maintain",
        "condition": "git diff --exit-code > /dev/null",
        "description": "hard resets to HEAD of origin and cleans the local repo",
        "env": Object {
          "BRANCH": "$(git branch --show-current)",
        },
        "name": "clobber",
        "steps": Array [
          Object {
            "exec": "git checkout -b scratch",
            "name": "save current HEAD in \\"scratch\\" branch",
          },
          Object {
            "exec": "git checkout $BRANCH",
          },
          Object {
            "exec": "git fetch origin",
            "name": "fetch latest changes from origin",
          },
          Object {
            "exec": "git reset --hard origin/$BRANCH",
            "name": "hard reset to origin commit",
          },
          Object {
            "exec": "git clean -fdx",
            "name": "clean all untracked files",
          },
          Object {
            "say": "ready to rock! (unpushed commits are under the \\"scratch\\" branch)",
          },
        ],
      },
    },
  },
  ".projenrc.js": "new (require('projen').Project)({ name: 'foo' }).synth()",
  "README.md": "# replace this",
}
`;

exports[`the "--rc" option can be used to specify projenrc location 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes                    	linguist-generated
/.github/workflows/auto-approve.yml	linguist-generated
/.projen/                          	linguist-generated",
  ".github/workflows/auto-approve.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: auto-approve
on:
  pull_request:
    types:
      - labeled
      - opened
      - unlabeled
jobs:
  approve:
    if: contains(github.event.pull_request.labels.*.name, 'pr/auto-approve')
    runs-on: ubuntu-latest
    steps:
      - uses: hmarr/auto-approve-action@v2.0.0
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.github/workflows/auto-approve.yml
!/.projen/deps.json
!/.projen/tasks.json
",
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "clobber": Object {
        "category": "30.maintain",
        "condition": "git diff --exit-code > /dev/null",
        "description": "hard resets to HEAD of origin and cleans the local repo",
        "env": Object {
          "BRANCH": "$(git branch --show-current)",
        },
        "name": "clobber",
        "steps": Array [
          Object {
            "exec": "git checkout -b scratch",
            "name": "save current HEAD in \\"scratch\\" branch",
          },
          Object {
            "exec": "git checkout $BRANCH",
          },
          Object {
            "exec": "git fetch origin",
            "name": "fetch latest changes from origin",
          },
          Object {
            "exec": "git reset --hard origin/$BRANCH",
            "name": "hard reset to origin commit",
          },
          Object {
            "exec": "git clean -fdx",
            "name": "clean all untracked files",
          },
          Object {
            "say": "ready to rock! (unpushed commits are under the \\"scratch\\" branch)",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
}
`;
